<resources>
    <string name="app_name">Number to Word Converter</string>
    <string name="action_settings">Settings</string>
    <string name="convert">Convert</string>
    <string name="clear_number">Clear number</string>
    <string name="enter_number">Please enter number from 1 up to 999999</string>
    <string name="please_enter_number">Please enter number</string>
</resources>
